refactor(backend): clean up identity, notification, payment, profile services